# UniClipboard

./: Cargo.toml
src/: common.rs  datatype.rs  main.rs
src/common/: clipboard.rs  hotkey.rs  message.rs  packer.rs  uniclip.rs
