[package]
name = "uni_clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
sha256 = "1.0.3"
arboard = "2.1.1"
lazy_static = "1.4.0"
term-painter = "0.3.0"
device_query = "1.1.1"
serde-encrypt = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.17", features = ["derive"] }
